methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:35: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
    }gauche()
     ^